<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_primary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/top_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_label"
        android:textSize="32dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/get_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_list_button"
        android:textSize="24dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/top_label"
        app:layout_constraintStart_toStartOf="@+id/top_label"
        app:layout_constraintEnd_toEndOf="@+id/top_label"
        />
    <TextView
        android:id="@+id/show_list"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/returned_list"
        android:textAlignment="center"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/get_list_button"
        app:layout_constraintEnd_toEndOf="@+id/get_list_button"
        app:layout_constraintStart_toStartOf="@+id/get_list_button"

        />

</androidx.constraintlayout.widget.ConstraintLayout>