<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_primary"
    android:padding="4dp"
    tools:context=".GetPassengers">

    <TextView
        android:id="@+id/top_label_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_label_second"
        android:textSize="28sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/add_passenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_passenger"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/top_label_second"
        app:layout_constraintStart_toStartOf="@+id/top_label_second"
        app:layout_constraintEnd_toEndOf="@+id/top_label_second"
        />
    <Button
        android:id="@+id/return_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_list_button"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:onClick="toFirst"
        app:layout_constraintTop_toBottomOf="@+id/add_passenger"
        app:layout_constraintStart_toStartOf="@+id/add_passenger"
        app:layout_constraintEnd_toEndOf="@+id/add_passenger"
        />

    <TextView
        android:id="@+id/add_list"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/accumulated_list"
        android:textAlignment="center"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/add_passenger"
        app:layout_constraintEnd_toEndOf="@+id/add_passenger"
        app:layout_constraintStart_toStartOf="@+id/add_passenger"

        />
</androidx.constraintlayout.widget.ConstraintLayout>